update info and styles

--- a/1resume/style.css
+++ b/1resume/style.css
@@ -1,27 +1,26 @@
-body
-{
+body {
     font-family: 'Roboto', sans-serif;
     background-color: #f7f7ef;
 }
-.main-container
-{
+
+.main-container {
     display: flex;
     flex-direction: row-reverse;
     width: 1200px;
     background-color: white;
     margin: 40px auto;
 }
-.main-content-section
-{
+
+.main-content-section {
     display: column;
     padding: 100px 90px;
 }
-.about-me-section
-{
+
+.about-me-section {
     margin: 0 0 40px 0;
 }
-.main-content-title
-{
+
+.main-content-title {
     font-style: normal;
     font-weight: bold;
     font-size: 22px;
@@ -29,8 +28,8 @@ body
     color: black;
     margin-bottom: 10px;
 }
-.about-me-profession
-{
+
+.about-me-profession {
     font-size: 14px;
     font-weight: bold;
     color: black;
@@ -38,8 +37,8 @@ body
     line-height: 17px;
     margin-bottom: 20px;
 }
-.about-me-name
-{
+
+.about-me-name {
     font-style: normal;
     font-weight: bold;
     font-size: 45px;
@@ -47,8 +46,8 @@ body
     color: black;
     margin: 0 0 20px 0;
 }
-.about-me-description
-{
+
+.about-me-description {
     width: 400px;
     font-style: normal;
     font-weight: normal;
@@ -56,60 +55,60 @@ body
     line-height: 24px;
     color: #595959;
 }
-.projects-list
-{
+
+.projects-list {
     background-color: #fff;
     color: #595959;
     font-size: 14px;
     line-height: 24px;
 }
-.my-projects-section
-{
-    margin: 50px;
+
+.my-projects-section {
+    margin: 0px;
 }
-.projects-list
-{
+
+.projects-list {
     padding: 0 0 0 20px;
 }
-.project-item
-{
+
+.project-item {
     color: #000;
 }
-.project-list-item
-{
+
+.project-list-item {
     color: black;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
 }
-.my-work-experience
-{
-    margin: 50px;
+
+.my-work-experience {
+    margin-top: 8px;
 }
-.my-education
-{
-    margin: 50px;
+
+.my-education {
+    margin-top: 8px;
 }
-.sidebar-section
-{
+
+.sidebar-section {
     width: 370px;
     padding: 40px 0;
     background-color: rgb(28, 28, 77);
 }
-.contacts-section
-{
+
+.contacts-section {
     margin: 50px 0 0 50px;
 }
-.tech-skills-section
-{
+
+.tech-skills-section {
     margin: 50px 0 0 50px;
 }
-.soft-skills-section
-{
+
+.soft-skills-section {
     margin: 50px 0 0 50px;
 }
-.sidebar-title
-{
+
+.sidebar-title {
     font-style: normal;
     font-weight: bold;
     font-size: 22px;
@@ -117,33 +116,33 @@ body
     color: white;
     margin-bottom: 10px;
 }
-.contacts-section-type
-{
+
+.contacts-section-type {
     font-weight: bold;
     font-size: 14px;
     line-height: 24px;
     color: white;
     margin-right: 10px;
 }
-.contacts-section-link
-{
+
+.contacts-section-link {
     color: white;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
 }
-.tech-skills-list
-{
+
+.tech-skills-list {
     padding: 0 0 0 15px;
     color: white;
 }
-.tech-skills-item
-{
+
+.tech-skills-item {
     color: #fb6d3a;
 }
-.text
-{
+
+.text {
     display: block;
     font-style: normal;
     font-weight: normal;
@@ -151,26 +150,26 @@ body
     line-height: 24px;
     color: black;
 }
-.tech-skills-item-text
-{
- display: block;
- font-style: normal;
- font-weight: normal;
- font-size: 14px;
- line-height: 24px;
- color: white;
+
+.tech-skills-item-text {
+    display: block;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: white;
 }
-.soft-skills-list
-{
+
+.soft-skills-list {
     padding: 0 0 0 15px;
     color: white;
 }
-.soft-skills-item
-{
+
+.soft-skills-item {
     color: #fb6d3a;
 }
-.soft-skills-item-text
-{
+
+.soft-skills-item-text {
     display: block;
     font-style: normal;
     font-weight: normal;
